[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/UIVolumeSlider/UIVolumeSlider.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/blinker/fonts_ttf/Blinker-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Entities/Features/FeatureButtonEffects/FeatureButtonEffectUI/FeatureButtonEffectUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Features/FeatureFontSizeOverrider/FeatureFontSizeOverrider.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 48
font_data = ExtResource( 2 )

[node name="VolumeSlider" type="HBoxContainer"]
margin_right = 1000.0
margin_bottom = 79.0
rect_min_size = Vector2( 1000, 0 )
custom_constants/separation = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 10.0
margin_right = 320.0
margin_bottom = 69.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/font = SubResource( 1 )
text = "Music Volume"

[node name="FeatureFontSizeOverrider" parent="Label" instance=ExtResource( 4 )]
font_size = 48

[node name="HSlider" type="HSlider" parent="."]
margin_left = 336.0
margin_right = 744.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonMute" type="Button" parent="."]
margin_left = 760.0
margin_right = 1000.0
margin_bottom = 79.0
rect_min_size = Vector2( 240, 48 )
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Mute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeatureFontSizeOverrider" parent="ButtonMute" instance=ExtResource( 4 )]
font_size = 48

[node name="FeatureButtonEffectPop" parent="ButtonMute" instance=ExtResource( 3 )]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="ButtonMute" to="." method="_on_ButtonMute_toggled"]
